--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -20,8 +20,8 @@
 .app-logo p{
     margin-top: 5px;
     margin-bottom: 5px;
-    font-weight: 500;
-    font-size: 18px;
+    font-weight: 650;
+    font-size: 20px;
 }
 .search{
     display: flex;
@@ -57,17 +57,15 @@
     gap: 0px;
 }
 .cart-image img{
-    height: 40px;
+    height: 45px;
 }
 .navbar-count
 {
+    width: 25px;
     height: 45px;
-    width: 20px;
-    display: flex;
-    align-items: flex-start;
 }
 .cart-count{
-    width: 25px;
+    width: 20px;
     height: 20px;
     border-radius: 50%;
     display: flex;
@@ -79,18 +77,18 @@
     color: white;
 }
 .login{
-    height: 35px;
-    width: 65px;
+    height: 40px;
+    width: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: rgb(140, 185, 185);
     border: 2px solid white;
     border-radius: 8px;
 }
 
 .login:active{
-    background-color: grey;
+    background-color: white;
 }
 
 .login-para{
